# 90-North-Assignment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
aws/: README.md  addTwoNumbers.py  uploadDocToS3.py
django/: README.md
django/chat_app/templates/auth/: base.html  login.html  register.html
django/chat_app/templates/chat/: base.html  home.html  start_chat.html
django/django_channel/: asgi.py  settings.py  urls.py  views.py
frontend/: README.md  index.html
frontend/css/: main.css
frontend/js/: main.js
